--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_fonts: ^5.1.0
   hexcolor: ^3.0.1
   image_picker: ^1.0.2
+  cloud_firestore: ^4.8.4
 
 dev_dependencies:
   flutter_test:
