--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   hexcolor: ^3.0.1
   image_picker: ^1.0.2
   cloud_firestore: ^4.8.4
+  awesome_snackbar_content: ^0.1.3
 
 dev_dependencies:
   flutter_test:
