--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,36 +28,28 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  awesome_snackbar_content: ^0.1.3
+  cloud_firestore: ^4.8.4
+  cupertino_icons: ^1.0.2
+  file_picker: ^5.3.3
+  firebase_auth: ^4.7.2
+  firebase_core: ^2.15.0
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  firebase_core: ^2.15.0
-  firebase_auth: ^4.7.2
-  supabase_flutter: ^1.10.11
   google_fonts: ^5.1.0
+  google_mlkit_text_recognition: ^0.10.0
   hexcolor: ^3.0.1
   image_picker: ^1.0.2
-  cloud_firestore: ^4.8.4
-  awesome_snackbar_content: ^0.1.3
+  read_pdf_text: ^0.2.1
+  supabase_flutter: ^1.10.11
 
 dev_dependencies:
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^2.0.0
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -69,14 +61,13 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/books-clipart.png
+    - assets/images/364836.jpg
+    - assets/images/question.png
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
