--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   image_picker: ^1.0.2
   cloud_firestore: ^4.8.4
   awesome_snackbar_content: ^0.1.3
+  flutter_sequence_animation: ^4.0.0
+  animated_text_kit: ^4.2.2
 
 dev_dependencies:
   flutter_test:
