--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   awesome_snackbar_content: ^0.1.3
   flutter_sequence_animation: ^4.0.0
   animated_text_kit: ^4.2.2
+  liquid_swipe: ^3.1.0
 
 dev_dependencies:
   flutter_test:
