--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_sequence_animation: ^4.0.0
   animated_text_kit: ^4.2.2
   liquid_swipe: ^3.1.0
+  flutter_colorpicker: ^1.0.3
 
 dev_dependencies:
   flutter_test:
