--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   liquid_swipe: ^3.1.0
   flutter_colorpicker: ^1.0.3
+  audioplayers: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -74,7 +75,12 @@ flutter:
   assets:
     - assets/images/books-clipart.png
   #   - images/a_dot_ham.jpeg
-
+    - assets/sounds/bird_chirping.mp3
+    - assets/sounds/ocean_waves.mp3
+    - assets/sounds/rain.mp3
+    - assets/sounds/forest.mp3
+    - assets/sounds/campfire.mp3
+    - assets/sounds/waterfall.mp3
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
