--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,21 +30,20 @@ environment:
 dependencies:
   animated_text_kit: ^4.2.2
   awesome_snackbar_content: ^0.1.3
-  cloud_firestore: ^4.8.4
+  firebase_core: ^2.14.0
+  firebase_auth: ^4.6.3
+  cloud_firestore: ^4.8.1
   cupertino_icons: ^1.0.2
-  firebase_core: ^2.15.0
-  firebase_auth: ^4.7.2
   supabase_flutter: ^1.10.11
   google_fonts: ^5.1.0
   google_mlkit_text_recognition: ^0.10.0
   hexcolor: ^3.0.1
   image_picker: ^1.0.2
-  cloud_firestore: ^4.8.4
-  awesome_snackbar_content: ^0.1.3
+
   flutter_sequence_animation: ^4.0.0
-  animated_text_kit: ^4.2.2
   liquid_swipe: ^3.1.0
   audioplayers: ^5.0.0
+  flutter_colorpicker: ^1.0.3
 
 dev_dependencies:
 
