--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   liquid_swipe: ^3.1.0
   audioplayers: ^5.0.0
   flutter_colorpicker: ^1.0.3
+  http: ^1.1.0
 
 dev_dependencies:
 
