--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   audioplayers: ^5.0.0
   flutter_colorpicker: ^1.0.3
   http: ^1.1.0
+  lottie: ^2.5.0
 
 dev_dependencies:
 
@@ -76,6 +77,7 @@ flutter:
     - assets/sounds/forest.mp3
     - assets/sounds/campfire.mp3
     - assets/sounds/waterfall.mp3
+    - assets/animations/clap_animation.json
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
