--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   http: ^1.1.0
   image_picker: ^1.0.2
   liquid_swipe: ^3.1.0
+  lottie: ^2.5.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -68,6 +69,7 @@ flutter:
     - assets/sounds/ocean_waves.mp3
     - assets/sounds/rain.mp3
     - assets/sounds/forest.mp3
+    - assets/sounds/meditation_sound.mp3
     - assets/sounds/campfire.mp3
     - assets/sounds/waterfall.mp3
     - assets/animations/clap_animation.json
